# solana-confidential-mint

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  main.rs  mint-keypair.json  test_create_mint.rs
chats/: chat1.md  chat2.md  chat3.md  chat4.md
florin-core/: .gitignore  Cargo.toml  README.md  mod.rs  standalone_test.rs  test_create_mint.rs  test_ct_functions.rs  test_verification.rs
florin-core/.cargo/: config.toml
florin-core/src/: main.rs
florin-core/src/lib/: confidential_ops.rs  mod.rs  proof_import.rs  proof_verification.rs
florin-core/tests/: cli_tests.rs  confidential_ops_tests.rs  proof_import_tests.rs  proof_verification_tests.rs
florin-zk/: Cargo.toml  README.md  demo_transfer_proof.json  demo_withdraw_proof.json
florin-zk/.cargo/: config.toml
florin-zk/src/: lib.rs  main.rs
florin-zk/src/lib/: dto_schema.json  dto_versioning.rs  mod.rs  proof_export.rs  zk_proofs.rs
scripts/: deploy_florin_program.sh  init_token.sh  update_structure.sh
src/lib/: confidential_ops.rs
test-data/: sample_transfer_proof.json
