[package]
name = "florin-core"
version = "0.1.0"
edition = "2021"
description = "Confidential Token implementation using Solana 1.17"

[lib]
name = "florin_core"
path = "src/lib/mod.rs"

[[bin]]
name = "florin-core"
path = "src/main.rs"

[[bin]]
name = "test-create-mint"
path = "test_create_mint.rs"

[[bin]]
name = "test-verification"
path = "test_verification.rs"

[[bin]]
name = "standalone-test"
path = "standalone_test.rs"

[dependencies]
# --- Solana core ---
solana-sdk = "=1.18.22"
solana-client = "=1.18.22"
solana-program = "=1.18.22"
solana-zk-token-sdk = "=1.18.22"

# --- Token extensions for 1.17 line ---
spl-token = "=4.0.0"
spl-token-2022 = "=0.7.0"
spl-token-client = "=0.7.0"
spl-associated-token-account = "=1.1.3"


# --- utilities ---
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4.0"
rand = "0.8.5"
rand_core = "0.6"

[dev-dependencies]
tempfile = "3.10.1"

[workspace]

