[package]
name = "florin-zk"
version = "0.1.0"
edition = "2021"
description = "Zero Knowledge implementations using Solana 2.0+"

[lib]
name = "florin_zk"
path = "src/lib/mod.rs"

[[bin]]
name = "florin-zk"
path = "src/main.rs"

[dependencies]
# --- Solana core 2.0+ ---
solana-sdk = "=2.2.1"  
solana-client = "=2.2.1"
solana-program = "=2.2.1"

# --- Token extensions for 2.0+ line ---
spl-token = "=8.0.0"  # Updated for 2.0 compatibility
spl-token-2022 = "=0.9.0"  # Updated for 2.0 compatibility
spl-token-client = "0.9.1"  # Updated for 2.0 compatibility
spl-associated-token-account = "7.0.0"  # Updated for 2.0 compatibility

# --- ZK Token SDK for 2.0+ ---
solana-zk-token-sdk = "=2.2.1"
spl-token-confidential-transfer-proof-generation = "0.3.0"
spl-token-confidential-transfer-proof-extraction = "0.3.0"

# --- utilities ---
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4.0"
rand = "0.8.5"
rand_core = "0.6"
bincode = "1.3.3"  # For serializing proofs
base64 = "0.21.5"   # For base64 encoding/decoding
clap = { version = "4.4.12", features = ["derive"] }  # For command line parsing

[workspace]