[package]
name = "florin-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Latest SPL and Solana SDK
solana-sdk = "2.2.2"
solana-zk-token-sdk = "2.2.12"
spl-token-2022 = { version = "8.0.1", features = ["serde-traits"] }
spl-token-confidential-transfer-proof-generation = "0.4.0"
spl-pod = "0.5.1"

# Other utils
rand_core = "0.6"
subtle = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8.5"
bs58 = "0.4.0"
bincode = "1.3.3"
base64 = "0.21.5"
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
bytemuck = { version = "1.13", features = ["derive"] }

# Instead of using patch, we'll ensure our dependency versions pull in the correct curve25519-dalek version
# [patch.crates-io]
# curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "u64_backend", "zeroize"] }
# zeroize = { version = "1.8.1", default-features = false }
